k8s/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
#  type: NodePort
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
#      nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-service
          image: anuragaggarwalnagarro01/api-service:2.0.0
          resources:
            requests:
              cpu: 50m
          ports:
            - containerPort: 8082
