k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignment-ingress
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: api-service
      port:
        number: 8080
